syntax = "proto3";

package slides;

import "media.proto";

message HeroSlideStyle {
    string align = 1;
    string textColor = 2;
    string btnBgc = 3;
    string btnTextColor = 4;
}

message HeroSlide {
  required uint32 id = 1;
  string destinationUrl = 2;
  string title = 3;
  string description = 4;
  repeated Image thumbnail = 5;
  bool published = 6;
  string btnLabel = 7;
  HeroSlideStyle styles = 8;
  uint32 position = 9;
}

message Slider {
  string destinationUrl = 1;
  uint32 position = 2;
  string text = 3;
  string textColor = 4;
}

message PromoBanner {
  string animationSpeed = 1;
  string backgroundColor = 2;
  string direction = 3;
  repeated Slider sliders = 4;
}

message HeroSlidesRequest {
    required string alias = 1;
    required uint32 storeLanguageId = 2;
    optional string storeId = 3;
  }

message HeroSlidesResponse {
    repeated HeroSlide sliders = 1;
  }

message PromoBannerRequest {
  required string alias = 1;
  required uint32 storeLanguageId = 2;
  optional string storeId = 3;
}

message PromoBannerResponse {
  PromoBanner banner = 1;
}